--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,11 @@
       media="screen"
       charset="utf-8"
     />
+    <script
+      type="text/javascript"
+      src="https://media.twiliocdn.com/sdk/js/client/v1.7/twilio.min.js"
+    ></script>
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
