--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,32 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <script type="text/javascript">
+      !(function(e, t, n) {
+        function a() {
+          var e = t.getElementsByTagName("script")[0],
+            n = t.createElement("script");
+          (n.type = "text/javascript"),
+            (n.async = !0),
+            (n.src = "https://beacon-v2.helpscout.net"),
+            e.parentNode.insertBefore(n, e);
+        }
+        if (
+          ((e.Beacon = n = function(t, n, a) {
+            e.Beacon.readyQueue.push({ method: t, options: n, data: a });
+          }),
+          (n.readyQueue = []),
+          "complete" === t.readyState)
+        )
+          return a();
+        e.attachEvent
+          ? e.attachEvent("onload", a)
+          : e.addEventListener("load", a, !1);
+      })(window, document, window.Beacon || function() {});
+    </script>
+    <script type="text/javascript">
+      window.Beacon("init", "793a0423-51b3-43b3-9bbb-93924df46656");
+    </script>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
